syntax = "proto3";

package feed;

option go_package = "/feed";


service FeedService {
	rpc GetFeed(GetFeedRequest) returns (GetFeedResponse);
	rpc Reshare(ReshareRequest) returns (ReshareResponse);
}

message ReshareRequest {
	uint64 userId = 1;
	string postId  = 2;
}
message ReshareResponse {

}

// GetFeed
message GetFeedRequest {
	uint64 userId = 1;
	uint64 offset = 2;
	uint64 limit  = 3;
}
message GetFeedResponse {
	repeated string postIds = 2;
}
